--- a/style/global.css
+++ b/style/global.css
@@ -5,3 +5,42 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root {
+    --snitap-sun: #FFCD1E;
+    --snitap-sky-mid: #06B6D4;
+    --snitap-sky-light: #67E8F9;
+    --snitap-joy-mid: #DB2777;
+    --snitap-joy-light: #F472B6;
+    --snitap-leaf-mid: #16A34A;
+
+    --text: #000000;
+    --highlights: #000000;
+    --background: #FAFAFA;
+
+    --ff-syne: "Syne", sans-serif;
+    --ff-montserrat: "Montserrat", sans-serif;
+    --text-sm: .875rem;
+    --text-base: 1rem;
+    --text-lg: 2.5rem;
+    --text-xl: 4rem;
+}
+
+html, button {
+    font: 500 var(--text-base)/150% var(--ff-montserrat);
+}
+
+h1, h2 {
+    font-family: var(--ff-syne);
+    font-weight: 700;
+}
+
+h1 {
+    font-size: var(--text-xl);
+    line-height: 125%;
+}
+
+h2 {
+    font-size: var(--text-lg);
+    line-height: 120%;
+}
