--- a/style/hero.css
+++ b/style/hero.css
@@ -31,6 +31,41 @@ section.hero {
         display: block;
         animation: slideUp 6s infinite;
     }
+
+    /*buttons*/
+    & .buttons {
+        display: flex;
+        gap: 2rem;
+        margin-top: 3rem;
+
+        & .button {
+            display: flex;
+            align-items: center;
+            gap: .75rem;
+            border-radius: 5rem;
+            transition: scale 350ms;
+
+            &.buy {
+                padding: 1.5rem 3rem;
+                background-color: var(--snitap-sun);
+            }
+
+            &.play span{
+                background-color: white;
+                padding: 1.5rem;
+                border-radius: 50%;
+                display: flex;
+            }
+
+             &:hover {
+                scale: 1.1;
+            }
+        }
+    }
+
+    .shadow {
+        box-shadow: 0 57px 16px 0 rgba(0, 0, 0, 0.00), 0 36px 15px 0 rgba(0, 0, 0, 0.01), 0 20px 12px 0 rgba(0, 0, 0, 0.05), 0 9px 9px 0 rgba(0, 0, 0, 0.09), 0 2px 5px 0 rgba(0, 0, 0, 0.10);
+    }
 }
 
 @keyframes slideUp {
