--- a/style/hero.css
+++ b/style/hero.css
@@ -3,6 +3,10 @@ section.hero {
     width: 100%;
     padding: 2.5rem 2rem;
     margin-inline: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
 
     & h1 {
         max-width: 40rem;
@@ -29,7 +33,7 @@ section.hero {
 
     & h1 span {
         display: block;
-        animation: slideUp 6s infinite;
+        animation: slideUp 6s 2s infinite;
     }
 
     /*buttons*/
@@ -63,8 +67,81 @@ section.hero {
         }
     }
 
-    .shadow {
-        box-shadow: 0 57px 16px 0 rgba(0, 0, 0, 0.00), 0 36px 15px 0 rgba(0, 0, 0, 0.01), 0 20px 12px 0 rgba(0, 0, 0, 0.05), 0 9px 9px 0 rgba(0, 0, 0, 0.09), 0 2px 5px 0 rgba(0, 0, 0, 0.10);
+    /*patins*/
+    & > div:nth-child(2) {
+        display: block;
+        width: 100%;
+        max-width: 30.5rem;
+        height: 30.5rem;
+
+        & .content {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        & img {
+            position: absolute;
+            width: 100%;
+        }
+
+        & img[src*="Ellipse"] {
+            width: 94%;
+            top: 3%;
+            left: 3%;
+            transform: translateX(200%);
+            animation: slideIn 3s 200ms ease forwards;
+        }
+
+        & img[src*="patins"] {
+            z-index: 1;
+            transform: translateX(200%);
+            animation: slideIn 3s ease forwards;
+        }
+
+        & img[src*="stars-1"] {
+            max-width: 5.5rem;
+            top: 8.4375rem;
+            left: .5rem;
+            z-index: 0;
+            opacity: 0;
+            transform: translateX(400%);
+            animation: slideIn 2s 800ms ease both, appear 100ms 800ms both;
+        }
+
+        & img[src*="stars-2"] {
+            max-width: 2.5rem;
+            top: 16.0625rem;
+            right: .125rem;
+            z-index: 0;
+            transform: translateX(400%);
+            animation: slideIn 2.2s 800ms ease both;
+        }
+    }
+}
+
+
+.shadow {
+    box-shadow: 0 57px 16px 0 rgba(0, 0, 0, 0.00),
+    0 36px 15px 0 rgba(0, 0, 0, 0.01),
+    0 20px 12px 0 rgba(0, 0, 0, 0.05),
+    0 9px 9px 0 rgba(0, 0, 0, 0.09),
+    0 2px 5px 0 rgba(0, 0, 0, 0.10);
+}
+
+@keyframes slideIn {
+    50% {
+        transform: translateX(-20px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes appear {
+    100% {
+        opacity: 1;
     }
 }
 
