--- a/style/galerry.css
+++ b/style/galerry.css
@@ -94,6 +94,7 @@ section.galerry {
             width: 2rem;
             aspect-ratio: 1/1;
             object-fit: cover;
+            border-radius: 50%;
         }
     }
 }
