--- a/style/global.css
+++ b/style/global.css
@@ -49,3 +49,10 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+@media (width <= 61.25rem) {
+    h1 {
+        font-size: 2rem;
+        line-height: 125%;
+    }
+}
